# Plugin_Terminal

./: Cargo.toml  README.md
src/: lib.rs  plugin.rs  terminal_drawer.rs  terminal_element.rs
